# DustReplay

./: .gitignore  DustReplay.sln  LEGAL.md  LICENSE  README-CSharp.md  README.md  build-csharp.ps1  build.ps1  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
dustreplay/: __init__.py  _mkicon.py  app_window.py  audio_devices.py  branding_paths.py  clip_editor.py  config.py  encoding.py  first_run.py  game_detect.py  gif_maker.py  i18n.py  logger_setup.py  main.py  main_window.py  monitors.py  overlay.py  page_home.py  page_recordings.py  page_settings.py  recorder.py  saver.py  startup.py  stats_window.py  theme.py  thumb_cache.py  updater.py  watchdog.py
installer/: DustReplay.iss  OmniReplay.iss  README.md  bundle-ffmpeg.ps1
instant_replay/: REBUILD.bat  SETUP.bat  rebuild.ps1  rebuild_debug.txt  setup.ps1  setup_debug.txt
setting/: settings.local.json
src/DustReplay.App/: App.xaml  App.xaml.cs  DustReplay.App.csproj
src/DustReplay.App/Branding/: BrandingPaths.cs
src/DustReplay.App/Controls/: GalleryStrip.xaml  GalleryStrip.xaml.cs  MenuRow.xaml  MenuRow.xaml.cs  PlayOverlay.xaml  PlayOverlay.xaml.cs  TitleBar.xaml  TitleBar.xaml.cs
src/DustReplay.App/Services/: AppHost.cs  AudioDeviceService.cs  HotkeyService.cs  SingleInstanceMutex.cs  StartupService.cs  TrayService.cs
src/DustReplay.App/Themes/: Colors.xaml  Controls.xaml  (+1 more)
src/DustReplay.Core/: AppPaths.cs  AppSettings.cs  DustReplay.Core.csproj  EncodingHelper.cs  FfmpegCommandBuilder.cs  RecorderService.cs  ReplaySaver.cs  WatchdogService.cs
(+8 files in other folders)
